--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@ html {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
     padding-left: 5vw;
 }
 
@@ -484,14 +484,24 @@ html {
 
 .left-side-secqf p {
     color: white;
-    line-height: 30px;
+    line-height: 25px;
 }
 
-.left-side-secqf button {
+.left-side-secqf div {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+.left-side-secqf div a {
     height: 50px;
-    width: 150px;
+    width: 250px;
     padding: 15px;
     border-radius: 30px;
+    text-align: center;
+    text-decoration: none;
     border: none;
     cursor: pointer;
     background-color: var(--cor-1);
@@ -1077,8 +1087,8 @@ footer img {
     /* FIM SEC 1 */
     /* quem somos */
     .secqf {
-        height: 1450px;
-        max-height: 1450px;
+        height: 1350px;
+        max-height: 1350px;
         flex-direction: column;
     }
 
@@ -1092,6 +1102,11 @@ footer img {
         padding-top: 40px;
         text-align: center !important;
     }
+
+    .left-side-secqf div {
+        justify-content: center;
+    }
+    
 
     .right-side-secqf {
         width: 100%;
