--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@ html {
     line-height: 25px;
 }
 
-.left-side-secqf div {
+.left-side-secqf .box-btn-qs {
     width: 100%;
     height: 60px;
     display: flex;
@@ -495,7 +495,7 @@ html {
     justify-content: left;
 }
 
-.left-side-secqf div a {
+.btn-qs {
     height: 50px;
     width: 250px;
     padding: 15px;
